--- a/public/website/css/clean-blog.css
+++ b/public/website/css/clean-blog.css
@@ -5,14 +5,14 @@
  */
 
 body {
-  font-size: 20px;
+  font-size: 1rem;
   color: #212529;
   font-family: 'Noto Sans SC', 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 p {
   line-height: 1.5;
-  margin: 30px 0;
+  margin: 0.5rem 0;
 }
 
 p a {
@@ -44,9 +44,9 @@ blockquote {
 }
 
 .section-heading {
-  font-size: 36px;
+  font-size: 2.5rem;
   font-weight: 700;
-  margin-top: 60px;
+  margin-top: 3rem;
 }
 
 .caption {
@@ -102,7 +102,7 @@ img::-moz-selection {
 #mainNav .navbar-toggler {
   font-size: 1rem;
   font-weight: 600;
-  padding: 13px;
+  padding: 0.5rem;
   text-transform: uppercase;
   color: #343a40;
 }
@@ -215,7 +215,7 @@ header.masthead .site-heading h1 {
 
 header.masthead .page-heading .subheading,
 header.masthead .site-heading .subheading {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 300;
   line-height: 1.1;
   display: block;
@@ -233,7 +233,7 @@ header.masthead .site-heading .subheading {
 }
 
 header.masthead .post-heading h1 {
-  font-size: 35px;
+  font-size: 1.5rem;
 }
 
 header.masthead .post-heading .meta,
@@ -243,14 +243,14 @@ header.masthead .post-heading .subheading {
 }
 
 header.masthead .post-heading .subheading {
-  font-size: 24px;
+  font-size: 1.25rem;
   font-weight: 600;
   margin: 10px 0 30px;
   font-family: 'Noto Sans SC', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 header.masthead .post-heading .meta {
-  font-size: 20px;
+  font-size: 0.8rem;
   font-weight: 300;
   font-style: italic;
   font-family: 'Noto Sans SC', 'Helvetica Neue', Helvetica, Arial, sans-serif;
@@ -262,10 +262,10 @@ header.masthead .post-heading .meta a {
 
 @media only screen and (min-width: 768px) {
   header.masthead .post-heading h1 {
-    font-size: 55px;
+    font-size: 2rem;
   }
   header.masthead .post-heading .subheading {
-    font-size: 30px;
+    font-size: 1.5rem;
   }
 }
 
@@ -279,9 +279,9 @@ header.masthead .post-heading .meta a {
 }
 
 .post-preview > a > .post-title {
-  font-size: 30px;
-  margin-top: 30px;
-  margin-bottom: 10px;
+  font-size: 1.5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 .post-preview > a > .post-subtitle {
@@ -308,7 +308,7 @@ header.masthead .post-heading .meta a {
 
 @media only screen and (min-width: 768px) {
   .post-preview > a > .post-title {
-    font-size: 36px;
+    font-size: 2rem;
   }
 }
 
