--- a/public/website/css/clean-blog.css
+++ b/public/website/css/clean-blog.css
@@ -310,7 +310,7 @@ header.masthead .post-heading .meta a {
 }
 
 .post-preview > .post-meta {
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-style: italic;
   margin-top: 0;
   color: #868e96;
@@ -332,6 +332,9 @@ header.masthead .post-heading .meta a {
   }
   .post-preview > a > .post-subtitle {
     font-size: 1.5rem;
+  }
+  .post-preview > .post-meta {
+    font-size: 0.9rem;
   }
 }
 
