--- a/public/website/css/clean-blog.css
+++ b/public/website/css/clean-blog.css
@@ -294,8 +294,8 @@ header.masthead .post-heading .meta a {
     font-size: 1rem;
 }
 
-.container p {
-    margin: 10px auto;
+.container .row p {
+    margin: 1.5rem auto;
 }
 
 .post-preview > a {
