--- a/public/website/css/clean-blog.css
+++ b/public/website/css/clean-blog.css
@@ -288,6 +288,12 @@ header.masthead .post-heading .meta a {
   }
 }
 
+.container .column-title {
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 700;
+    font-size: 1rem;
+}
+
 .container .row p {
     margin: 1.5rem auto;
 }
